# LOB-Reconstruction

./: CLAUDE.md  README.md  package.json  pyproject.toml
config/: exchange_config.py  settings.py
lob/engine/: auction_engine.py  channel_buffer.py  continuous_engine.py  sse_engine.py  szse_engine.py
lob/factors/: derived_indicators.py  dynamic_factors.py  ofi.py  static_factors.py
lob/io/: reader.py  writer.py
lob/models/: order.py  order_book.py  price_level.py  snapshot.py
lob/parsers/: base_parser.py  sse_parser.py  szse_parser.py
lob/phase/: phase_classifier.py  phase_transitions.py
lob/pipeline/: batch_runner.py  channel_coordinator.py  pipeline.py
lob/resampler/: resampler.py
lob/validator/: validator.py
scripts/: check.ipynb  run_batch.py  run_single.py  test_data_test.py
tests/: test_auction_engine.py  test_factors.py  test_order_book.py  test_phase_classifier.py  test_resampler.py
tests/fixtures/: sample_data.py
